--- a/main.html
+++ b/main.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random Quote Generator</title>
 </head>
 <body>
-    
+    <h1>Random Quote Generator</h1>
+    <p id="quote"></p>
+    <!-- Button that triggers the generateQuote() function when clicked -->
+    <button onclick="generateQuote()">Generate Quote</button>
+    <script src="index.js"></script>
 </body>
 </html>
